--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
   }
 
-#footer, #home, #title2, p, .profile, .generic-title, button {
+#footer, #home, #title2, p, .profile, .generic-title, button, #title3 {
     position: relative;
     z-index: 3;
 }
@@ -10,6 +10,11 @@ html {
 #title2 {
     /* max-width: 13em; */
     max-width: 15em;
+}
+
+#title3 {
+  /* max-width: 13em; */
+  max-width: 15em;
 }
 
 .title {
